--- a/app/src/main/res/layout/activity_man_hinh_chao.xml
+++ b/app/src/main/res/layout/activity_man_hinh_chao.xml
@@ -52,7 +52,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Make by NAMANH"
+        android:text="Make by DUYDUNG"
         android:textColor="#302D2D"
         app:layout_constraintTop_toBottomOf="@id/imv_logo"
         app:layout_constraintLeft_toLeftOf="@id/imv_icon1"
